--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "feather-icons": "^4.29.0",
     "pinia": "^2.0.24",
     "roboto-fontface": "*",
-    "vue": "^3.2.38",
+    "vue": "^3.2.45",
+    "vue-feather": "^2.0.0",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
   },
