--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.45",
     "vue-feather": "^2.0.0",
     "vuetify": "^3.0.0",
+    "wc-github-corners": "^0.1.5",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
