--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "install-pre-commit": "copy scripts/pre-commit .git/hooks/"
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
