Using Store items and added filtering

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "feather-icons": "^4.29.0",
     "pinia": "^2.0.27",
     "roboto-fontface": "^0.10.0",
+    "uuid": "^9.0.0",
     "vue": "^3.2.45",
     "vue-feather": "^2.0.0",
     "vuetify": "^3.0.2",
