--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "copy-pre-commit": "node scripts/copyPreCommit"
+    "copy-pre-commit": "node scripts/copyPreCommit",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
