--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "copy-pre-commit": "node scripts/copyPreCommit",
-    "lint": "eslint ."
+    "lint": "eslint . --ext .js --ext .vue"
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
