--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@mdi/font": "7.0.96",
     "deep-object-diff": "^1.1.9",
     "feather-icons": "^4.29.0",
+    "github-corner-element": "^1.0.1",
     "pinia": "^2.0.27",
     "roboto-fontface": "^0.10.0",
     "uuid": "^9.0.0",
     "vue": "^3.2.45",
     "vue-feather": "^2.0.0",
     "vuetify": "^3.0.3",
-    "wc-github-corners": "^0.1.5",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
