--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "github-corner-element": "^1.0.1",
     "pinia": "^2.0.27",
     "roboto-fontface": "^0.10.0",
+    "splitpanes": "^3.1.5",
     "uuid": "^9.0.0",
     "vue": "^3.2.45",
+    "vue-color-input": "^1.0.6",
     "vue-feather": "^2.0.0",
     "vuetify": "^3.0.3",
     "webfontloader": "^1.6.28"
