--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "lint": "eslint . --ext .js --ext .vue"
   },
   "dependencies": {
-    "@mdi/font": "7.0.96",
+    "@mdi/font": "^7.1.96",
     "deep-object-diff": "^1.1.9",
     "feather-icons": "^4.29.0",
     "github-corner-element": "^1.0.1",
-    "pinia": "^2.0.27",
+    "pinia": "^2.0.28",
     "roboto-fontface": "^0.10.0",
     "uuid": "^9.0.0",
     "vue": "^3.2.45",
@@ -23,10 +23,10 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.2.0",
-    "eslint": "^8.28.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "eslint": "^8.30.0",
     "eslint-plugin-vue": "^9.8.0",
-    "vite": "^3.2.4",
-    "vite-plugin-vuetify": "^1.0.0"
+    "vite": "^4.0.3",
+    "vite-plugin-vuetify": "^1.0.1"
   }
 }
