--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.1.96",
+    "async-lz-string": "^1.1.0",
     "deep-object-diff": "^1.1.9",
     "diff": "^5.1.0",
     "feather-icons": "^4.29.0",
